src/objects/CBL_FoodSecurity__c.object
<CustomObject>
    <description>Holds the food security information for a Coffee Baseline</description>
    <fields>
        <fullName>Baseline__c</fullName>
        <label>Baseline</label>
        <referenceTo>CBL_CoffeeBaseline__c</referenceTo>
        <relationshipLabel>CBL_FoodSecurities</relationshipLabel>
        <relationshipName>CBL_FoodSecurities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FS_Chronic_score__c</fullName>
        <formula>if(text(howOftenWorried__c)=&quot;Muy rara vez&quot;,0,if(text(worriedBuyingFood__c)=&quot;Sí&quot;,1,0))
+if(text( howOfterNotEnoughFood__c )=&quot;Muy rara vez&quot;,0,if(text(notEnoughFoodLackMoney__c)=&quot;Sí&quot;,1,0))
+if(text( howOftenAteTheSame__c )=&quot;Muy rara vez&quot;,0,if(text(ateTheSameLackMoney__c)=&quot;Sí&quot;,1,0))
+if(text( howOftenLessFood__c )=&quot;Muy rara vez&quot;,0,if(text(lessFoodLackMoney__c)=&quot;Sí&quot;,1,0))
+if(text( howOftenSkippedMeals__c )=&quot;Muy rara vez&quot;,0,if(text(skippedMealsLackMoney__c)=&quot;Sí&quot;,1,0))
+if(text( howOftenAteLessFood__c )=&quot;Muy rara vez&quot;,0,if(text(thinkAteLessFood__c)=&quot;Sí&quot;,1,0))
+if(text( howOftenHungryDidntAte__c )=&quot;Muy rara vez&quot;,0,if(text(hungryDidnEatLackMoney__c)=&quot;Sí&quot;,1,0))
+if(text(lostWeightLackMoney__c)=&quot;Sí&quot;,1,0)
+if(text( howOftenStoppedEating__c )=&quot;Muy rara vez&quot;,0,if(text(stoppedEatingLackMoney__c)=&quot;Sí&quot;,1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FS - Chronic score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_Prevalence_score__c</fullName>
        <formula>if(text(worriedBuyingFood__c)=&quot;Sí&quot;,1,0)
+if(text(notEnoughFoodLackMoney__c)=&quot;Sí&quot;,1,0)
+if(text(ateTheSameLackMoney__c)=&quot;Sí&quot;,1,0)
+if(text(lessFoodLackMoney__c)=&quot;Sí&quot;,1,0)
+if(text(skippedMealsLackMoney__c)=&quot;Sí&quot;,1,0)
+if(text(thinkAteLessFood__c)=&quot;Sí&quot;,1,0)
+if(text(hungryDidnEatLackMoney__c)=&quot;Sí&quot;,1,0)
+if(text(lostWeightLackMoney__c)=&quot;Sí&quot;,1,0)
+if(text(stoppedEatingLackMoney__c)=&quot;Sí&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FS - Prevalence score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Food_security_status_chronic__c</fullName>
        <formula>if(  FS_Chronic_score__c  &lt; 3, &quot;Food-secure&quot;, if (FS_Chronic_score__c &lt;6,&quot;Moderately food-insecure&quot;, &quot;Severely food-insecure&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food security status (chronic)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_security_status_prevalence__c</fullName>
        <formula>if( FS_Prevalence_score__c &lt; 3, &quot;Food-secure&quot;, if (FS_Prevalence_score__c&lt;6,&quot;Moderately food-insecure&quot;, &quot;Severely food-insecure&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food security status (prevalence)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL_FoodSecurity_Submission</relationshipLabel>
        <relationshipName>CBL_FoodSecurity_Submission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ateTheSameLackMoney__c</fullName>
        <label>ateTheSameLackMoney</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>howOftenAteLessFood__c</fullName>
        <label>howOftenAteLessFood</label>
        <picklist>
            <picklistValues>
                <fullName>Seguido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy rara vez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>howOftenAteTheSame__c</fullName>
        <label>howOftenAteTheSame</label>
        <picklist>
            <picklistValues>
                <fullName>Seguido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy rara vez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>howOftenHungryDidntAte__c</fullName>
        <label>howOftenHungryDidntAte</label>
        <picklist>
            <picklistValues>
                <fullName>Seguido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy rara vez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>howOftenLessFood__c</fullName>
        <label>howOftenLessFood</label>
        <picklist>
            <picklistValues>
                <fullName>Seguido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy rara vez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>howOftenSkippedMeals__c</fullName>
        <label>howOftenSkippedMeals</label>
        <picklist>
            <picklistValues>
                <fullName>Seguido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy rara vez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>howOftenStoppedEating__c</fullName>
        <label>howOftenStoppedEating</label>
        <picklist>
            <picklistValues>
                <fullName>Seguido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy rara vez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>howOftenWorried__c</fullName>
        <label>howOftenWorried</label>
        <picklist>
            <picklistValues>
                <fullName>Seguido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy rara vez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>howOfterNotEnoughFood__c</fullName>
        <label>howOfterNotEnoughFood</label>
        <picklist>
            <picklistValues>
                <fullName>Seguido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy rara vez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>hungryDidnEatLackMoney__c</fullName>
        <label>hungryDidnEatLackMoney</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lessFoodLackMoney__c</fullName>
        <label>lessFoodLackMoney</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lostWeightLackMoney__c</fullName>
        <label>lostWeightLackMoney</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>notEnoughFoodLackMoney__c</fullName>
        <label>notEnoughFoodLackMoney</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>skippedMealsLackMoney__c</fullName>
        <label>skippedMealsLackMoney</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>stoppedEatingLackMoney__c</fullName>
        <label>stoppedEatingLackMoney</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>thinkAteLessFood__c</fullName>
        <label>thinkAteLessFood</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>worriedBuyingFood__c</fullName>
        <label>worriedBuyingFood</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CBL_FoodSecurity</label>
    <nameField>
        <displayFormat>FS-{0000000}</displayFormat>
        <label>CBL_FoodSecurity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBL_FoodSecurities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>